# RDM-flowable-gateway

./: .env.sample  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  requirements.txt
.github/workflows/: test.yml
asice-cli/: .gitignore  Dockerfile  README.md  pyproject.toml
asice-cli/asice_cli/: __init__.py  cli.py  core.py  tsa.py
asice-cli/tests/: test_cli.py
cli/: __init__.py  deploy_workflow.py
config/: gateway-dev-v1.key.example  keyset.example.json  logging.yaml  rdm-publication-approval.bpmn20.xml
example/workflow/: README.md
gateway/: __init__.py  auth.py  database.py  encrypted_type.py  flowable.py  init_db.py  keyset.py  main.py  models.py  rdm_proxy.py  schemas.py  settings.py  signing.py
tests/: test_gateway_flowable_endpoints.py  test_gateway_process_instances.py  test_gateway_rdm_proxy.py
