[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asice-cli"
version = "0.1.0"
description = "CLI for building and verifying ASiC-E containers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
]

[project.scripts]
asice-cli = "asice_cli.cli:run"

[tool.typer]
pretty_errors_show_locals = true
